--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
 body {
     font-family: 'Montserrat', 'Open Sans', 'Poppins',  sans-serif;
 }
+<!---Bagian Header--->
 header{
     height: 85px;
     width: 100%;
@@ -23,7 +24,7 @@ header{
     height: auto;
     margin-top: 10px;
 }
-
+<!---Bagian Main--->
 .container {
     width: 1170px;
     margin: 0 auto;
@@ -33,6 +34,8 @@ header{
     padding: 180px 0 100px 0;
     background: #521751
   }
+
+<!---Bagian Benefit--->
 .benefit-wrapper{
     height: 720px;
     padding-bottom: 80px;
@@ -123,5 +126,6 @@ section{
       -webkit-border-radius:50%;
       width:90px;
   } 
+<!---Bagian Header--->
 
 
