--- a/main.css
+++ b/main.css
@@ -1,21 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@700&family=Poppins&display=swap');
 
 * {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Montserrat', 'Open Sans', 'Poppins',  sans-serif;
-}
-<!---Bagian Header--->
-* {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    transition: all 0.4s ease;;
-  }
+    transition: all 0.4s ease;
+}
+
+<!---Bagian Header--->
   
   body {
     margin: 0px;
