--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
     transition: all 0.4s ease;
 }
 
-<!---Bagian Header--->
+/* <!---Bagian Header---> */
   
   body {
     margin: 0px;
@@ -127,7 +127,7 @@
       overflow-y: auto;
     }
   }
-<!---Bagian Main--->
+/* <!---Bagian Main---> */
 .container {
     width: 1170px;
     margin: 0 auto;
@@ -138,7 +138,7 @@
     background: #521751
   }
 
-<!---Bagian Benefit--->
+/* <!---Bagian Benefit---> */
 .benefit-wrapper{
     height: 720px;
     padding-bottom: 80px;
@@ -229,7 +229,7 @@ section{
       -webkit-border-radius:50%;
       width:90px;
   } 
-<!---Bagian Footer--->
+/* <!---Bagian Footer---> */
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
   margin: 0;
