--- a/main.css
+++ b/main.css
@@ -14,8 +14,34 @@
     margin: 0px;
     height: 100vh;
     font-family: 'Poppins', sans-serif;
+    animation: puff 0.8s 0s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, borderRadius 0.2s 2.3s linear forwards;
   }
-
+@keyframes puff {
+  0%
+  {
+    top: 0px;
+    height: 100%;
+    padding: 0px 100%;
+    
+  }
+  100%
+  {
+    top:100%;
+    height: 0px;
+    padding: 0px;
+  }
+}
+@keyframes borderRadius
+{
+  0%
+  {
+    border-radius: 0px;
+  }
+  100%
+  {
+    border-radius: 100%;
+  }
+}
   
   .nav {
     position: fixed;
