--- a/main.css
+++ b/main.css
@@ -1,144 +1,160 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@700&family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@700&family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    transition: all 0.4s ease;
+  box-sizing: border-box;
+  margin: 0px;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  /* Header */
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
-/* <!---Bagian Header---> */
-  
-  body {
-    margin: 0px;
-    height: 100vh;
-    font-family: 'Poppins', sans-serif;
-    animation: puff 0.8s 0s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, borderRadius 0.2s 2.3s linear forwards;
-  }
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  font-family: "Quicksand", sans-serif;
+  /* font-family: "Montserrat", "Open Sans", "Poppins", sans-serif; */
+
+  /* animation */
+  margin: 0px;
+  animation: puff 0.6s 0s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards,
+    borderRadius 0.2s 2.3s linear forwards;
+}
+
 @keyframes puff {
-  0%
-  {
+  0% {
     top: 0px;
     height: 100%;
     padding: 0px 100%;
-    
   }
-  100%
-  {
-    top:100%;
+  100% {
+    top: 100%;
     height: 0px;
     padding: 0px;
   }
 }
-@keyframes borderRadius
-{
-  0%
-  {
+
+@keyframes borderRadius {
+  0% {
     border-radius: 0px;
   }
-  100%
-  {
+  100% {
     border-radius: 100%;
   }
 }
-  
-  .nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 10%;
-    width: 100%;
-    background-color: #385877;
-    z-index: 100;
-  }
 
-  
-  .nav  .nav-header {
-    display:flex;
-    float: left;
-    align-items: center;
-  }
-  
-  .nav  .nav-header  .nav-title {
-    display: flex;
-    float: left;
-  }
-  
- 
-  .logo img{
-    width: 15vh;
-    padding: 0% 20%;
-    float: left;
-    display: flex;
-    align-items: center;
-  }
-  
-  .nav  .nav-btn {
-    display: none;
-  }
-  
-  .nav  .nav-links {
-    display: flex;
-    float: right;
-    font-size: 20px;
-  }
-  
-  .nav  .nav-links  a {
-    display:flex;
-    float: left;
-    align-items: center;
-    padding: 20px 10px 13px 10px;
-    align-items: center;
-    text-decoration: none;
-    color: #efefef;
-  }
-  
-  .nav  .nav-links  a:hover {
-    background-color: rgba(0, 0, 0, 0.3);
-  }
-  
-  .nav  #nav-check {
-    display: none;
-  }
-
-/* Banner */
-.BannerIntro {
-  margin-top: 50px;
-  background-color: #f7fafb;
-  padding: 50px 36px 34px 137px;
+/* Roots */
+.underlineT {
+  background-color: #403f44;
+  height: 5px;
+  width: 8%;
+  margin: -15px auto 30px;
+  border-radius: 20px;
 }
 
-.clear {
-  clear: left;
+.titleSection {
+  margin-bottom: 20px;
+  text-align: center;
+  font-weight: 800;
+  font-size: 30px;
 }
 
-.BannerIntro .txtDescription {
+/* Header */
+nav {
+  background: rgba(34, 33, 39, 0.6);
+  height: 80px;
+  width: 100%;
+  padding: 0 50px;
+  position: fixed;
+}
+.logo img {
+  max-width: 100px;
   float: left;
-  width: 600px;
-  height: 350px;
-  font-weight: 500;
+  max-height: 100%;
+  align-items: center;
+  padding-top: 12px;
 }
-
-.TitleSection {
-  font-size: 28px;
-  color: #000;
-}
-
-.BannerIntro .txtDescription .DescritptionSection {
-  font-size: 16px;
-  margin: 15px 0px;
-  color: #000;
-}
-
-.BannerIntro img {
-  width: 500px;
+nav ul {
   float: right;
-  border-radius: 50px 0px 0px 50px;
+  margin-right: 20px;
+}
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+nav ul li a {
+  color: white;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+ul li a:hover {
+  background: #1b9bff;
+  transition: 0.5s;
+}
+.checkbtn {
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check {
+  display: none;
 }
 
-.BannerIntro .btn-wrapper .btn {
-  padding: 18px 24px;
+/* Banners-Desktop */
+.banners {
+  background-color: #f5f4fa;
+  padding: 110px 100px 50px;
+  /*padding section*/
+}
+
+.banners .container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.banners .txtDescripton {
+  padding: 20px 0;
+  color: #403f44;
+}
+
+.banners img {
+  width: 400px;
+  border-radius: 7px;
+  align-self: center;
+}
+
+.banners h3 {
+  margin: 0px 0 15px 0;
+}
+
+.banners p {
+  width: 90%;
+}
+
+.banners .buttonGroup {
+  margin-top: 20px;
+  display: flex;
+}
+
+.banners .buttonGroup .btn {
+  padding: 15px 24px;
   display: inline-block;
   text-align: center;
   text-decoration: none;
@@ -147,263 +163,139 @@
   transition: 0.8s;
 }
 
-.btn-1 {
-  background-color: white;
-  color: #116963;
-  border: 2px solid #116963;
+.banners .btn-1 {
+  background-color: #f5f4fa;
+  color: #403f44;
+  border: 2px solid #403f44;
   margin-right: 10px;
 }
 
-.btn-2 {
-  background-color: #116963;
-  color: white;
+.banners .btn-1:hover {
+  background-color: #403f44;
+  color: #f5f4fa;
+  margin-right: 10px;
+  box-shadow: 0px 0px 25px #bbbbbb;
+  transition: 0.8s;
 }
 
-.btn-1:hover {
-  background-color: #116963;
-  color: white;
-}
-.btn-2:hover {
-  background-color: white;
-  color: #116963;
-  border: 2px solid #116963;
+/* WhaatWeNeed */
+.whatweneed {
+  background-color: #ffffff;
+  padding: 40px 150px 20px;
+  color: #403f44;
 }
 
-/* Section 2 */
-.Section2 {
-  text-align: center;
-  padding: 20px 0 50px;
+.whatweneed .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.Section2 .TitleSection {
-  font-weight: 800;
-  color: #17827b;
-  margin: 20px;
+.whatweneed .container .list-wwn {
+  display: flex;
+  justify-content: space-between;
+  width: 75%;
+  padding: 15px 30px;
+  background-color: #f5f4fa;
+  border-radius: 20px;
+  margin-bottom: 20px;
 }
 
-.btmLineTitile {
-  background-color: #73cfc9;
-  height: 7px;
+.whatweneed .container .list-wwn p {
+  align-self: center;
+  width: 70%;
+  text-align: left;
+}
+
+.whatweneed .container .list-wwn img {
+  width: 40px;
+  height: 40px;
+}
+
+/* S3 */
+.S3 {
+  background-color: #222127;
+  padding: 50px;
+  color: #fefeff;
+}
+.S3 .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.S3 .container .list-benefit {
+  display: flex;
+  width: 28%;
+  margin: 20px 0 20px;
+}
+
+.S3 .container .list-benefit img {
   width: 100px;
-  border-radius: 30px;
-  margin: -20px auto 20px;
+  height: 100px;
+  border-radius: 7px;
+  padding: 20px;
+  border: 2px solid #fefeff;
+  margin-right: 20px;
 }
 
-.List {
-  margin: 30px auto;
-  /* padding: auto; */
-  width: 80%;
-  background-color: white;
-  padding: 10px 80px;
-  height: 70px;
-  border-radius: 15px;
-  box-shadow: 0px 0px 15px #888888;
+.S3 .container .list-benefit h3 {
+  margin-bottom: 10px;
 }
 
-.List p {
-  float: left;
-  font-size: 20px;
-  font-weight: 0;
-  margin-top: 12px;
-  color: #116963;
+.ut-S3 {
+  background-color: #fefeff;
 }
 
-.List img {
-  float: right;
-  width: 50px;
+/* ourteam */
+.ourteam {
+  background-color: #ffffff;
+  padding: 40px 150px 20px;
+  color: #403f44;
 }
 
-.clear {
-  clear: left;
+.ourteam .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-/* End Banner */
-  
-  @media (max-width:600px) {
-    .nav > .nav-btn {
-      display: inline-block;
-      position: absolute;
-      right: 0px;
-      top: 0px;
-    }
-    .logo img{
-      align-items: center;
-      width: 7em 0px;
-      
-      margin-bottom: 10px;
-    }
-    .nav  .nav-btn  label {
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      padding: 13px;
-    }
-    .nav  .nav-btn  label:hover,.nav  #nav-check:checked ~ .nav-btn  label {
-      background-color: rgba(0, 0, 0, 0.3);
-    }
-    .nav  .nav-btn  label  span {
-      display: block;
-      width: 25px;
-      height: 10px;
-      border-top: 2px solid #eee;
-    }
-    .nav  .nav-links {
-      position: absolute;
-      display: block;
-      width: 100%;
-      background-color: #333;
-      height: 0px;
-      transition: all 0.3s ease-in;
-      overflow-y: hidden;
-      top: 70px;
-      left: 0px;
-    }
-    .nav  .nav-links  a {
-      display: block;
-      width: 100%;
-    }
-    .nav  #nav-check:not(:checked) ~ .nav-links {
-      height: 0px;
-    }
-    .nav  #nav-check:checked ~ .nav-links {
-      height: calc(100vh - 50px);
-      overflow-y: auto;
-    }
-  }
-/* <!---Bagian Main---> */
-.container {
-    width: 1170px;
-    margin: 0 auto;
-  }
 
-.main{
-    padding: 180px 0 100px 0;
-    background: #521751
-  }
-
-/* <!---Bagian Benefit---> */
-.benefit-wrapper{
-    height: 720px;
-    padding-bottom: 80px;
-    text-align: center;
-    background-color:#F8EFBA;
-  }
-.heading{
-    padding-top: 60px;
-    color: #2c3e50;
-    padding-bottom: 30px;
-    border-bottom: 1px solid #2c3e50;
-  }
-section{
-    display: grid;
-    grid-template-columns: repeat(3, 2fr);
-    gap: 25px;
-}
-.benefit{
-    float: left;  
-    margin-top: 20px;          
-
-  }
-.benefit-icon{
-    position: relative;
-    font-size: 18px;
-    font-weight: bold;
-  }
-.benefit-icon p{      
-    color: #2c3e50;            
-    top: 90px;            
-    width: 100%;
-  }
-.icon{
-    border: 3px solid #2c3e50;
-    border-radius: 8px;
-    padding: 20px;
-  }
-.deskripsi{
-    width: 80%;
-    display : inline-block;
-    margin-top: 20px;
-    font-size : 15px;
-    color: black;
-    font-weight: normal;
-  }
-.team img {
-    height: 100%;
-    width: auto;
-    clip-path: circle()0;
-
-}
-.team h3{
-    text-align: center;
-  }
-.grid-1 {
-    display: grid;
-    grid-template-columns: repeat(3, 2fr);
-    gap: 40px;
-  }
-  .teamH{
-      text-align: center;
-      padding-top: 30px;
-      padding-bottom: 60px;
-  }
-
-  .card {
-    padding: 10px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: -7px -7px 20px rgba(0, 0, 0, 0.2),
-                 7px  7px 20px rgba(0, 0, 0, 0.2)
-  }
-  .card h3{
-    text-align: center;
-  }
-  .card p{
-    text-align: center;
-  }
-  .circle {
-      background-color: transparent;
-      border:3px solid burlywood;
-      height:90px;
-      position: relative;
-      top: -35px;
-      left: 120px;
-      border-radius:50%;
-      -moz-border-radius:50%;
-      -webkit-border-radius:50%;
-      width:90px;
-  } 
-/* <!---Bagian Footer---> */
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  color: #d9d9d9;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-.content1{
-  position: relative;
-  margin: 130px auto;
+.ourteam .container .list-team {
+  width: 30%;
+  display: flex;
+  border-radius: 12px;
+  background-color: #f5f4fa;
+  flex-direction: column;
   text-align: center;
-  padding: 0 20px;
+  padding: 0 21px 30px;
+  margin: 20px 10px 60px;
 }
-.content1 .text{
-  font-size: 2.5rem;
-  font-weight: 600;
-  color: #202020;
+
+.ut-ourteam {
+  margin-bottom: 50px;
 }
-.content1 .p{
-  font-size: 2.1875rem;
-  font-weight: 600;
-  color: #202020;
+
+.ourteam .container .list-team img {
+  width: 120px;
+  margin-top: -65px;
+  align-self: center;
+  padding: 0px;
 }
-footer{
-  position: fixed;
+
+.ourteam .container .list-team h3 {
+  margin-bottom: 10px;
+}
+
+/* Footer */
+footer {
+  /* position: fixed; */
   bottom: 0px;
   width: 100%;
   background: #111;
+  color: #bbbbbb;
 }
 
-.about ul li a{
+.about ul li a {
   font-size: 12px;
   text-transform: capitalize;
   display: inline-block;
@@ -412,66 +304,73 @@ footer{
   color: #bbbbbb;
   transition: all 0.3s ease;
 }
-.footer-col ul li a:hover{
+.footer-col ul li a:hover {
   color: #ffffff;
   padding-left: 8px;
 }
 
-.main-content{
+.main-content {
   display: flex;
+  padding: 10px 50px;
 }
-.main-content .box{
+.main-content .box {
   flex-basis: 50%;
   padding: 10px 20px;
 }
-.box h2{
+.box h2 {
   font-size: 1.125rem;
   font-weight: 600;
   text-transform: uppercase;
 }
-.box .content{
+.box .content {
   margin: 20px 0 0 0;
   position: relative;
 }
-.box .content:before{
+.box .content:before {
   position: absolute;
-  content: '';
+  content: "";
   top: -10px;
   height: 2px;
   width: 100%;
   background: #1a1a1a;
 }
-.box .content:after{
+.box .content:after {
   position: absolute;
-  content: '';
+  content: "";
   height: 2px;
   width: 15%;
-  background: #f12020;
+  background: #cccccc;
   top: -10px;
 }
-.left .content p{
+.left .content p {
   text-align: justify;
 }
-.left .content .social{
+.left .content .social {
   margin: 20px 0 0 0;
+  text-decoration: none;
 }
-.left .content .social a{
+.left .content .social a {
   padding: 0 2px;
 }
-.left .content .social a span{
+.left .content .social a span {
   height: 40px;
   width: 40px;
-  background: #1a1a1a;
+  background: #bbbbbb;
   line-height: 40px;
   text-align: center;
   font-size: 18px;
   border-radius: 5px;
   transition: 0.3s;
+  color: #1a1a1a;
+  margin-right: 10px;
 }
-.left .content .social a span:hover{
-  background: #f12020;
+.left .content .social a span:hover {
+  background: #bbbbbb;
+  color: #1a1a1a;
+  box-shadow: 0px 0px 25px #bbbbbb;
+  transition: 0.8s;
 }
-.center .content .fas{
+.center .content .fas {
   font-size: 1.4375rem;
   background: #1a1a1a;
   height: 45px;
@@ -482,84 +381,238 @@ footer{
   transition: 0.3s;
   cursor: pointer;
 }
-.center .content .fas:hover{
+.center .content .fas:hover {
   background: #f12020;
 }
-.center .content .text{
+.center .content .text {
   font-size: 1.0625rem;
   font-weight: 500;
   padding-left: 10px;
 }
-.center .content .phone{
+.center .content .phone {
   margin: 15px 0;
 }
-.right form .text{
+.right form .text {
   font-size: 1.0625rem;
   margin-bottom: 2px;
   color: #656565;
 }
-.right form .msg{
+.right form .msg {
   margin-top: 10px;
 }
-.right form input, .right form textarea{
+.right form input,
+.right form textarea {
   width: 100%;
   font-size: 1.0625rem;
   background: #151515;
   padding-left: 10px;
   border: 1px solid #222222;
+  color: #bbbbbb;
 }
 .right form input:focus,
-.right form textarea:focus{
-  outline-color: #3498db;
+.right form textarea:focus {
+  outline-color: #bbbbbb;
 }
-.right form input{
+.right form input {
   height: 35px;
 }
-.right form .btn{
+.right form .btn {
   margin-top: 10px;
 }
-.right form .btn button{
+.right form .btn button {
   height: 40px;
   width: 100%;
   border: none;
   outline: none;
-  background: #f12020;
+  background: #bbbbbb;
   font-size: 1.0625rem;
   font-weight: 500;
   cursor: pointer;
-  transition: .3s;
+  transition: 0.3s;
 }
-.right form .btn button:hover{
-  background: #000;
+.right form .btn button:hover {
+  box-shadow: 0px 0px 20px #bbbbbb;
 }
-.bottom center{
+.bottom center {
   padding: 5px;
   font-size: 0.9375rem;
   background: #151515;
 }
-.bottom center span{
+.bottom center span {
   color: #656565;
 }
-.bottom center a{
-  color: #f12020;
+.bottom center a {
+  color: #bbbbbb;
   text-decoration: none;
 }
-.bottom center a:hover{
+.bottom center a:hover {
   text-decoration: underline;
 }
-@media screen and (max-width: 900px) {
-  footer{
-    position: relative;
-    bottom: 0px;
+
+/* Mobile */
+@media all and (max-width: 1000px) {
+  /* Ultility */
+  .underlineT {
+    width: 15%;
   }
-  .main-content{
+
+  /* Banners-Mobile */
+  .banners {
+    padding: 100px 20px 20px; /*padding section*/
+  }
+
+  .banners .container {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .banners .txtDescripton {
+    padding: 10px 0;
+  }
+
+  .banners img {
+    width: 100%;
+  }
+
+  .banners h3 {
+    margin: 0px 0 15px 0;
+  }
+
+  .banners p {
+    width: 100%;
+  }
+
+  .banners .buttonGroup {
+    margin-top: 20px;
+  }
+
+  .banners .buttonGroup .btn {
+    padding: 15px 24px;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    font-weight: 800;
+    width: 50%;
+    transition: 0.8s;
+    font-size: 14px;
+  }
+  /* whatweneed */
+  .whatweneed {
+    padding: 20px 20px; /*padding section*/
+  }
+
+  .whatweneed .container .list-wwn {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 15px 30px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+  }
+
+  .whatweneed .container .list-wwn p {
+    align-self: center;
+    width: 100%;
+    text-align: center;
+  }
+
+  .whatweneed .container .list-wwn img {
+    visibility: hidden;
+    width: 0px;
+  }
+
+  /*  */
+  .S3 {
+    padding: 20px 20px; /*padding section*/
+  }
+
+  .banners .container {
+    /* display: flex;
+    flex-direction: column; */
+
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .S3 .container .list-benefit {
+    display: flex;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  /*  */
+  .ourteam {
+    padding: 50px 20px 20px; /*padding section*/
+  }
+
+  .ut-ourteam {
+    margin-bottom: 50px;
+  }
+
+  .ourteam .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .ourteam .container .list-team {
+    width: 100%;
+    display: flex;
+    border-radius: 12px;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 21px 30px;
+    margin: 20px 10px 60px;
+  }
+  /*  */
+  footer {
+    /* position: relative; */
+    bottom: 0px;
+    z-index: 1000;
+  }
+  .main-content {
     flex-wrap: wrap;
     flex-direction: column;
   }
-  .main-content .box{
+  .main-content .box {
     margin: 5px 0;
   }
 }
 
+@media (max-width: 858px) {
+  .checkbtn {
+    display: block;
+  }
 
+  nav {
+    padding: 0 10px;
+    background: rgba(34, 33, 39, 1);
+    z-index: 100;
+  }
 
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: rgba(34, 33, 39, 0.6);
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  nav ul li a {
+    font-size: 20px;
+  }
+  a:hover,
+  a.active {
+    background: none;
+    color: #0082e6;
+  }
+  #check:checked ~ ul {
+    left: 0;
+  }
+}
