--- a/main.css
+++ b/main.css
@@ -201,6 +201,11 @@ ul li a:hover {
   margin-bottom: 20px;
 }
 
+.whatweneed .container .list-wwn:hover {
+  margin-right: 20px;
+  transition: 0.2s;
+}
+
 .whatweneed .container .list-wwn p {
   align-self: center;
   width: 70%;
